// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary with 1 expense correctly (no s on expenses) 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.12
  </h1>
</div>
`;

exports[`Should render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    34
     
    expenses
     totalling 
    $188.90
  </h1>
</div>
`;
